--- a/clusters/my-cluster/kubeview-kustomization.yaml
+++ b/clusters/my-cluster/kubeview-kustomization.yaml
@@ -4,8 +4,5 @@ kind: Kustomization
 metadata:
   name: kubeview
   namespace: default
-spec:
-  images:
-    - name: ghcr.io/benc-uk/kubeview:0.1.31
-      newName: ghcr.io/benc-uk/kubeview:0.1.31
-      newTag: 0.1.31
+resources:
+  - kubeview-deployment.yaml
